<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_text1"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:importantForAutofill="no"
            android:textSize="40sp"
            tools:ignore="TextFields,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_text1"
        android:orientation="vertical"
        android:id="@+id/text_layout2"
        android:weightSum="15">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="12">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:text="@string/_7"
                android:backgroundTint="@color/purple_500"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/n7"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:text="@string/_8"
                android:textSize="20sp"
                android:id="@+id/n8"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_9"
                android:textSize="20sp"
                android:id="@+id/n9"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Add"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:id="@+id/nAdd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="12">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_4"
                android:textSize="20sp"
                android:id="@+id/n4"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_5"
                android:textSize="20sp"
                android:id="@+id/n5"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3"
                    android:text="@string/_6"
                    android:textSize="20sp"
                    android:id="@+id/n6"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Sub"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:id="@+id/nSub"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="12">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_1"
                android:textSize="20sp"
                android:id="@+id/n1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_2"
                android:textSize="20sp"
                android:id="@+id/n2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/_3"
                android:textSize="20sp"
                android:id="@+id/n3"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Div"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:id="@+id/nDiv"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="12">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:text="@string/Dot"
                android:textSize="20sp"
                android:id="@+id/nDot"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/_0"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:id="@+id/n0"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginEnd="10dp"
                android:text="@string/Equal"
                android:textSize="20sp"
                android:id="@+id/nEqual"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:text="@string/Mult"
                android:textSize="20sp"
                android:id="@+id/nMult"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="12">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Clear"
                android:textSize="20sp"
                android:id="@+id/nClear"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>







